# PTOAS

./: .gitignore  CMakeLists.txt  README.md  _ptoas_build_backend.py
.github/scripts/: update_pto_isa_pin.py
.github/workflows/: build_wheel.yml  build_wheel_mac.yml  ci.yml  ci_sim.yml  update_pto_isa_pin.yml
docker/: Dockerfile  Dockerfile.dev  collect_ptoas_dist.sh  copy_ptoas_deps.sh  create_wheel.sh  test_wheel_imports.sh  validate_wheel_payload.py
docs/: PTO_IR_manual.md  vpto-spec.md
docs/designs/: a2a3-allocator.md  a2a3-vpto-elementwise-impl.md  a2a3-vpto-pr908-review-audit.md  ptoas-memory-consistency-design.md  ptoas-python-launcher-layout.md  ptoas-tileop-expand-design.md  ptodsl-tilelib-template-selection-design.md  vmi-dialect-design.md  vmi-e2b-scale-broadcast-optimization.md  vmi-group-value-cast-broadcast-generalization.md  vmi-implementation-manual.md  vmi-introduction.md  vmi-lane-stride-generalization-design.md  vmi-lane-stride-generalization-implementation.md  vmi-layout-assignment-implementation.md  vmi-layout-assignment-lowering-design.md  vmi-layout-lowering-cases.md  vmi-layout-relation-rematerialization-implementation.md  vmi-layout-request-propagation.md  vmi-mxfp8-32x32-expected-lowering.md  vmi-vf-fusion-design.md  vmi-vmull-pair-result-lowering-design.md
lib/TileOps/: issue_518_repro.py  tinsert_template.py  tload_template.py  tstore_template.py
mission/: alloc_buffer_local_scope.md
mission/483/: 483_13_rmsnorm_alloc_buffer_simt_context_kernel.py  483_docs.md  483_docs_zh.md
mission/issues_441_RMSNorm/: rmsnorm_issue441_progress.html
ptodsl/: README.md  ptoas_wheel_bootstrap.py
ptodsl/docs/: tilelib-gap-triage-and-handoff.md  tilelib-migration-testing.md  tilelib-st-failures.md
ptodsl/examples/: rmsnorm_alloc_buffer_simt.py  (+4 more)
scripts/: ptoas_env.sh
test/kernel-test/kernels/rope/cce/: CMakeLists.txt  backend.py  rope_cce_compute.h  rope_cce_gm_io.h  rope_cce_kernel.cpp  rope_cce_shim.h
tmp/: ptodsl_func_chain_probe.mlir  ptodsl_func_chain_probe.py
tools/: CMakeLists.txt
(+1606 files in other folders)
